adding lisp-format

--- a/emacs.org
+++ b/emacs.org
@@ -45,6 +45,7 @@
     company
     company-lsp
     elfeed
+    elisp-format
     ggtags
     git-auto-commit-mode
     haskell-mode
@@ -362,7 +363,17 @@
 (define-key tab-map (kbd "TAB") 'comment-dwim)
 (define-key tab-map (kbd "M-;") 'comment-dwim)
 (define-key tab-map (kbd "u") 'universal-argument)
-(define-key tab-map (kbd "i") 'clang-format-region)
+
+(define-key tab-map (kbd "i")
+  '(lambda ()
+     (interactive)
+     (cond (( string= "c-mode" major-mode)
+            (clang-format-region))
+           (( string= "c++-mode" major-mode)
+            (clang-format-region))
+           (( string= "emacs-lisp-mode" major-mode)
+            (elisp-format-region))
+           (t (message "Argh...don't know how to format in this mode :(")))))
 #+end_src
 
 ** anzu
@@ -459,7 +470,7 @@
           :buffer "*helm projectile projects*"
           :truncate-lines helm-projectile-truncate-lines)))
 
-(customize-set-variable 'helm-projectile-sources-list 
+(customize-set-variable 'helm-projectile-sources-list
                         '(helm-source-projectile-buffers-list
                           helm-source-projectile-files-list))
 
@@ -975,7 +986,7 @@
   (interactive)
   (or arg (setq arg 1))
   (dotimes (bind arg)
-    
+
     (scroll-down-line)
     (previous-line)))
 
@@ -983,7 +994,7 @@
   (interactive)
   (or arg (setq arg 1))
   (dotimes (bind arg)
-    
+
     (scroll-up-line)
     (next-line)))
 
@@ -1184,7 +1195,7 @@
 (electric-pair-mode t)
 #+END_SRC
 
-** semantic 
+** semantic
 #+BEGIN_SRC emacs-lisp
 (semantic-mode t)
 #+END_SRC
