fixing clang-format

--- a/emacs.org
+++ b/emacs.org
@@ -367,10 +367,13 @@
 (define-key tab-map (kbd "i")
   '(lambda ()
      (interactive)
-     (cond (( string= "c-mode" major-mode)
-            (clang-format-region))
-           (( string= "c++-mode" major-mode)
-            (clang-format-region))
+     (cond ((or ( string= "c++-mode" major-mode)
+                ( string= "c-mode" major-mode))
+            (if (use-region-p)
+                (clang-format-region (region-beginning)
+                                     (region-end) )
+              (clang-format-region (point)
+                                   (point))))
            (( string= "emacs-lisp-mode" major-mode)
             (elisp-format-region))
            (t (message "Argh...don't know how to format in this mode :(")))))
