sort mode recognition list

--- a/emacs.org
+++ b/emacs.org
@@ -802,37 +802,39 @@
 #+begin_src emacs-lisp
 (setq auto-mode-alist
       '(
-        ("\\.org$" . org-mode)
-        ("\\.org.gpg$" . org-mode)
-        ("\\.ref$" . org-mode)
-        ("\\.ref.gpg$" . org-mode)
-        ("\\.notes$" . org-mode)
-        ("\\.pdf\\'" . doc-view-mode)
-        ("\\.md\\'" . markdown-mode)
         ("[Mm]ake[Ff]ile\\'" . makefile-mode)
         ("\\.mak\\'" . makefile-mode)
+        ("\\.md\\'" . markdown-mode)
+        ("\\.notes$" . org-mode)
+        ("\\.org$" . org-mode)
+        ("\\.org.gpg$" . org-mode)
+        ("\\.pdf\\'" . doc-view-mode)
+        ("\\.ref$" . org-mode)
+        ("\\.ref.gpg$" . org-mode)
         ("\\.xml\\'" . xml-mode)
 
         ;;programming modes
-        ("\\.hs$" . haskell-mode)
-        ("\\.py\\'" . python-mode)
+        ("\\.bat\\'" . bat-mode)
         ("\\.c\\'" . c-mode)
         ("\\.cc\\'" . c-mode)
+        ("\\.cmd\\'" . bat-mode)
         ("\\.cpp\\'" . c++-mode)
+        ("\\.el\\'" . emacs-lisp-mode)
         ("\\.h\\'" . c++-mode)
         ("\\.hh\\'" . c++-mode)
         ("\\.hpp\\'" . c++-mode)
-        ("\\.s\\'" . c++-mode)
-        ("\\.mc\\'" . c++-mode)
+        ("\\.hs$" . haskell-mode)
         ("\\.java\\'" . java-mode)
-        ("\\.el\\'" . emacs-lisp-mode)
-        ("\\.scm\\'" . scheme-mode)
-        ("\\.rs\\'" . rust-mode)
+        ("\\.mc\\'" . c++-mode)
         ("\\.pm\\'" . perl-mode)
-        ("\\.cmd\\'" . bat-mode)
-        ("\\.bat\\'" . bat-mode)
+        ("\\.py\\'" . python-mode)
+        ("\\.rs\\'" . rust-mode)
+        ("\\.s\\'" . c++-mode)
+        ("\\.scala\\'" . scala-mode)
+        ("\\.scm\\'" . scheme-mode)
+        ("\\.sh\\'" . sh-mode)
         ("\\.yml\\'" . yaml-mode)
-        ("\\.scala\\'" . scala-mode)))
+))
 #+end_src
 
 ** SGML [XML/HTML]
